source/sass/_site.scss
/* ... */
.b-main-menu {
    a {
        abbr {
            color: $white-70;
        }
        &:hover {
            text-decoration: none;
        }
    }
    &:not(.m-active) {
        box-shadow: none;
    }
}

.b-question-answer {
    dt {
        font-size: 20px;
        margin-bottom: 40px;
        font-weight: 400;
        cursor: pointer;
        &::after {
            font-family: Material Icons;
            margin-left: 0.2m;
            font-size: 26px;
            line-height: 0.5;
            color: $gray-10;
            content: 'textsms';
            @include transition;
        }
        &:hover::after {
            color: $gray-50;
            @include transition;
        }
        &.m-active::after {
            color: $gray-30;
        }
    }
    dd {
        display: none;
        margin-bottom: 40px;
        font-size: 18px;
        font-weight: 700;
        // min-height: 80px;
        &.m-active {
            display: block;
        }
    }
}

.m-inline-block {
    display: inline-block;
}

.b-announcement {
    &.m-yellow {
        // background-color: $mrfp-yellow-shade;
        .material-icons {
            position: relative;
            top: 0.2em;
            color: $mrfp-yellow-shade;
        }
    }
}

#overlay {
    background-color: transparent;
}

